--- a/enhancy-example/package.json
+++ b/enhancy-example/package.json
@@ -11,15 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.1.0",
+    "@angular/cdk": "^15.2.3",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
+    "@angular/material": "^15.2.3",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@klippa/ngx-enhancy-forms": "^12.0.0",
+    "@ng-select/ng-select": "^10.0.3",
+    "angular-material-datepicker": "^1.0.2",
+    "ngx-sortablejs": "3.1.4",
     "rxjs": "~7.8.0",
+    "sortablejs": "1.7.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
