--- a/enhancy-example/package.json
+++ b/enhancy-example/package.json
@@ -23,6 +23,9 @@
     "@klippa/ngx-enhancy-forms": "^12.0.0",
     "@ng-select/ng-select": "^10.0.3",
     "angular-material-datepicker": "^1.0.2",
+    "date-fns": "^2.29.3",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "ngx-sortablejs": "3.1.4",
     "rxjs": "~7.8.0",
     "sortablejs": "1.7.0",
